@@ -100,32 +100,7 @@ class DataSource(object):
         return {}
 
     def get_public_ssh_keys(self):
-        keys = []
-
-        if not self.metadata or 'public-keys' not in self.metadata:
-            return keys
-
-        if isinstance(self.metadata['public-keys'], (basestring, str)):
-            return str(self.metadata['public-keys']).splitlines()
-
-        if isinstance(self.metadata['public-keys'], (list, set)):
-            return list(self.metadata['public-keys'])
-
-        if isinstance(self.metadata['public-keys'], (dict)):
-            for (_keyname, klist) in self.metadata['public-keys'].iteritems():
-                # lp:506332 uec metadata service responds with
-                # data that makes boto populate a string for 'klist' rather
-                # than a list.
-                if isinstance(klist, (str, basestring)):
-                    klist = [klist]
-                if isinstance(klist, (list, set)):
-                    for pkey in klist:
-                        # There is an empty string at
-                        # the end of the keylist, trim it
-                        if pkey:
-                            keys.append(pkey)
-
-        return keys
+        return normalize_pubkey_data(self.metadata.get('public-keys'))
 
     def _remap_device(self, short_name):
         # LP: #611137
@@ -206,6 +181,35 @@ class DataSource(object):
     def get_package_mirror_info(self):
         return self.distro.get_package_mirror_info(
             availability_zone=self.availability_zone)
+
+
+def normalize_pubkey_data(pubkey_data):
+    keys = []
+
+    if not pubkey_data:
+        return keys
+
+    if isinstance(pubkey_data, (basestring, str)):
+        return str(pubkey_data).splitlines()
+
+    if isinstance(pubkey_data, (list, set)):
+        return list(pubkey_data)
+
+    if isinstance(pubkey_data, (dict)):
+        for (_keyname, klist) in pubkey_data.iteritems():
+            # lp:506332 uec metadata service responds with
+            # data that makes boto populate a string for 'klist' rather
+            # than a list.
+            if isinstance(klist, (str, basestring)):
+                klist = [klist]
+            if isinstance(klist, (list, set)):
+                for pkey in klist:
+                    # There is an empty string at
+                    # the end of the keylist, trim it
+                    if pkey:
+                        keys.append(pkey)
+
+    return keys
 
 
 def find_source(sys_cfg, distro, paths, ds_deps, cfg_list, pkg_list):
